syntax = "proto3";

package core;

import "google/protobuf/duration.proto";
import "google/protobuf/any.proto";
import "proto/vega.proto";
import "proto/markets.proto";
import "proto/api/trading.proto";

message Instruction {
    string description = 1;
    string request = 2; //TODO (WG 31/10/2019): Look into using proto enum instead.
    google.protobuf.Any message = 3;
}

message InstructionSet {
    string description = 1;
    repeated Instruction instructions = 2;
}

message InstructionResult {
    Instruction instruction = 1;
    string error = 2;
    google.protobuf.Any response = 3;
}

message Metadata {
    uint64 instructionsProcessed = 1;
    uint64 instructionsOmitted = 2;
    uint64 tradesGenerated = 3;
    google.protobuf.Duration processingTime = 5;
    repeated vega.MarketDepth finalMarketDepth = 6;
}

message ResultSet {
    Metadata metadata = 1;
    repeated InstructionResult results = 2;
}

message ProtocolSummaryResponse {
    repeated MarketSummary markets = 1;
    repeated vega.Party parties = 2;
}

message MarketSummaryResponse {
    MarketSummary summary = 1;
}

message ProtocolSummaryRequest {
    api.Pagination pagination = 1;
}
message MarketSummaryRequest {
    string marketID = 1;
    api.Pagination pagination = 2;
}

message MarketSummary {
    vega.Market market = 1;
    repeated vega.Trade trades = 3;
    repeated vega.Order orders = 4;
    vega.MarketDepth marketDepth = 5;
}